# Caneda

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  DoxygenIndex.h  INSTALL  Makefile.am  README  README.md  RELEASE  caneda.desktop  caneda.xml  config.h.cmake  configure.ac  qt.tag
caneda/: CMakeLists.txt  actionmanager.cpp  actionmanager.h  canedadigi  canedadigi.bat  canedamainwindow.cpp  canedamainwindow.h  canedaview.cpp  canedaview.h  component.cpp  component.h  componentssidebar.cpp  componentssidebar.h  documentviewmanager.cpp  documentviewmanager.h  fileformathandler.cpp  fileformathandler.h  folderbrowser.cpp  folderbrowser.h  gitmanager.cpp  gitmanager.h  global.cpp  global.h  globals.h  icontext.cpp  icontext.h  idocument.cpp  idocument.h  item.cpp  item.h  iview.cpp  iview.h  library.cpp  library.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindowbase.cpp  mainwindowbase.h  (+70 more)
caneda-attenuator/: CMakeLists.txt  attenuatorfunc.cpp  attenuatorfunc.h  canedaattenuator.1  canedaattenuator.cpp  canedaattenuator.h  helpdialog.cpp  helpdialog.h  main.cpp
caneda-attenuator/bitmaps/: CMakeLists.txt
caneda-edit/: CMakeLists.txt  canedaedit.1  canedaedit.cpp  canedaedit.h  main.cpp
caneda-filter/: CMakeLists.txt  canedafilter.cpp  canedafilter.h  helpdialog.cpp  helpdialog.h  lc_filter.cpp  main.cpp
caneda-help/: CMakeLists.txt  canedahelp.cpp  canedahelp.h  htmldatafetcher.cpp  htmldatafetcher.h  main.cpp
caneda-help/docs/: CMakeLists.txt  caneda.1
caneda-lib/: CMakeLists.txt  canedalib.1  canedalib.cpp  canedalib.h  displaydialog.cpp  displaydialog.h  librarydialog.cpp  main.cpp  searchdialog.cpp  searchdialog.h  symbolwidget.cpp
caneda-qterm/: BlockArray.cpp  BlockArray.h  CMakeLists.txt  Character.h  Filter.cpp  History.h  KeyboardTranslator.cpp  KeyboardTranslator.h  Screen.h  TerminalCharacterDecoder.cpp
caneda-tools/: CMakeLists.txt  global.cpp  global.h  helpdialog.cpp  helpdialog.h  propertygrid.cpp  propertygrid.h  units.cpp  units.h
caneda-transcalc/: CMakeLists.txt  ChangeLog  c_microstrip.cpp  canedatrans.cpp  canedatrans.h  coax.cpp  helpdialog.cpp  helpdialog.h  main.cpp  microstrip.cpp  microstrip.h  optionsdialog.cpp  propertygrid.h  rectwaveguide.cpp  transline.cpp  units.cpp  units.h
caneda-transcalc/bitmaps/: CMakeLists.txt
caneda-transcalc/examples/: CMakeLists.txt
caneda/bitmaps/: CMakeLists.txt
caneda/diagrams/: CMakeLists.txt  diagram.cpp  diagram.h
caneda/dialogs/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  addtoprojectdialog.cpp  addtoprojectdialog.h  exportdialog.cpp  exportdialog.h  gitmanager.cpp  gitmanager.h  gitmanager.ui  librarymanager.cpp  printdialog.cpp  printdialog.h  printdialog.ui  projectfiledialog.cpp  projectfiledialog.h  projectfilenewdialog.cpp  projectfilenewdialog.h  projectfileopendialog.cpp  projectfileopendialog.h  propertydialog.h  propertydialog.ui  savedocumentsdialog.cpp  savedocumentsdialog.h  settingsdialog.cpp  settingsdialog.h  settingspages.cpp  settingspages.h
caneda/paintings/: CMakeLists.txt  arrow.cpp  arrow.h  ellipse.cpp  ellipse.h  ellipsearc.cpp  ellipsearc.h  graphicline.cpp  graphicline.h  graphictext.cpp  graphictext.h  graphictextdialog.cpp  graphictextdialog.h  id_text.cpp  id_text.h  painting.cpp  painting.h  paintings.h  portsymbol.cpp  portsymbol.h  rectangle.cpp  rectangle.h  styledialog.cpp  styledialog.h  ui_filldialog.h
caneda/tools/: CMakeLists.txt
caneda/translations/: qucs_jp.ts  qucs_sv.ts  qucs_uk.ts
caneda/xmlutilities/: CMakeLists.txt  QRelaxNGvalidator.cpp  QRelaxNGvalidator.h  QXmlStreamReaderExt.cpp  QXmlStreamReaderExt.h  QXsltTransformer.cpp  QXsltTransformer.h  transformers.cpp  transformers.h  validators.cpp  validators.h  xmlutilities.cpp  xmlutilities.h
i18n/: .gitignore  CMakeLists.txt  README.translations  caneda_de.ts  caneda_es.ts  caneda_es_AR.ts  caneda_fr.ts  caneda_he.ts  caneda_hu.ts  caneda_it.ts  caneda_jp.ts  caneda_pl.ts  caneda_pt.ts  caneda_ro.ts  caneda_ru.ts  caneda_sv.ts  caneda_tr.ts  caneda_uk.ts  qtgeneric_de.ts  qtgeneric_es.ts  qtgeneric_fr.ts  qtgeneric_he.ts  qtgeneric_hu.ts  qtgeneric_it.ts  qtgeneric_jp.ts  qtgeneric_pl.ts  qtgeneric_ro.ts  qtgeneric_ru.ts  qtgeneric_sv.ts  qtgeneric_tr.ts  qtgeneric_untranslated.ts
images/: CMakeLists.txt
images/icons/: CMakeLists.txt
images/png/: CMakeLists.txt
images/svg/: CMakeLists.txt
lang/: CMakeLists.txt  caneda_ro.ts  caneda_ru.ts  caneda_tr.ts
qucs/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  actionmanager.cpp  actionmanager.h  component.cpp  component.h  componentssidebar.cpp  componentssidebar.h  fileformathandler.cpp  fileformathandler.h  folderbrowser.cpp  folderbrowser.h  global.cpp  global.h  item.cpp  item.h  library.cpp  library.h  line.h  main.cpp  main.h  mainwindowbase.cpp  mainwindowbase.h  mnemo.cpp  mnemo.h  node.cpp  node.h  port.cpp  port.h  project.cpp  project.h  property.cpp  property.h  propertydialog.cpp  propertydialog.h  propertygroup.cpp  propertygroup.h  propertyitem.cpp  (+52 more)
qucs-tools/: Makefile.am  global.cpp  global.h  helpdialog.cpp  helpdialog.h  propertygrid.cpp  propertygrid.h  units.cpp
qucs-transcalc/: CMakeLists.txt  Makefile.am  c_microstrip.cpp  coax.cpp  helpdialog.cpp  optionsdialog.cpp  optionsdialog.h  qucstrans.h  transline.cpp  transline.h
src/: CMakeLists.txt  ChangeLog  actionmanager.cpp  actionmanager.h  cgraphicsitem.cpp  cgraphicsitem.h  cgraphicsscene.cpp  cgraphicsscene.h  cgraphicsview.cpp  cgraphicsview.h  chartitem.cpp  chartitem.h  chartscene.cpp  chartscene.h  chartview.cpp  chartview.h  clineedit.cpp  clineedit.h  component.cpp  component.h  componentscache.cpp  componentscache.h  componentssidebar.cpp  componentssidebar.h  csimulationitem.cpp  csimulationitem.h  csimulationplot.cpp  csimulationplot.h  csimulationscene.cpp  csimulationscene.h  csimulationview.cpp  csimulationview.h  documentviewmanager.cpp  documentviewmanager.h  fileexport.cpp  fileexport.h  fileformathandler.cpp  fileformathandler.h  fileformatraw.cpp  fileformatraw.h  (+168 more)
src/layers/: layer.h  (+4 more)
(+670 files in other folders)
