INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR/caneda-attenuator} ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_SUBDIRECTORY( bitmaps )

SET(CANEDAATTENUATOR_SRCS attenuatorfunc.cpp helpdialog.cpp main.cpp canedaattenuator.cpp)

SET(CANEDAATTENUATOR_MOC_HDRS canedaattenuator.h)

QT4_WRAP_CPP( CANEDAATTENUATOR_MOC_SRCS ${CANEDAATTENUATOR_MOC_HDRS} )

LINK_DIRECTORIES( ${Caneda_BINARY_DIR}/caneda-tools )

ADD_EXECUTABLE( canedaattenuator ${CANEDAATTENUATOR_SRCS} ${CANEDAATTENUATOR_MOC_SRCS} )

TARGET_LINK_LIBRARIES( canedaattenuator ${QT_LIBRARIES} canedatools )

INSTALL(TARGETS canedaattenuator DESTINATION ${BINARYDIR})
