INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR/qucs} ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )

SET(QUCSEDIT_SRCS main.cpp qucsedit.cpp)

SET(QUCSEDIT_MOC_HDRS qucsedit.h)

QT4_WRAP_CPP( QUCSEDIT_MOC_SRCS ${QUCSEDIT_MOC_HDRS} )

LINK_DIRECTORIES( ${Qucs_BINARY_DIR}/qucs-tools )

ADD_EXECUTABLE( qucsedit ${QUCSEDIT_SRCS} ${QUCSEDIT_MOC_SRCS} )

TARGET_LINK_LIBRARIES( qucsedit ${QT_LIBRARIES} qucstools )

INSTALL(TARGETS qucsedit DESTINATION ${BINARYDIR})
