INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR/caneda} ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )

SET(CANEDAEDIT_SRCS main.cpp canedaedit.cpp)

SET(CANEDAEDIT_MOC_HDRS canedaedit.h)

QT4_WRAP_CPP( CANEDAEDIT_MOC_SRCS ${CANEDAEDIT_MOC_HDRS} )

LINK_DIRECTORIES( ${Caneda_BINARY_DIR}/caneda-tools )

ADD_EXECUTABLE( canedaedit ${CANEDAEDIT_SRCS} ${CANEDAEDIT_MOC_SRCS} )

TARGET_LINK_LIBRARIES( canedaedit ${QT_LIBRARIES} canedatools )

INSTALL(TARGETS canedaedit DESTINATION ${BINARYDIR})
