INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR/qucs-help} ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_SUBDIRECTORY( docs )

SET(QUCSHELP_SRCS qucshelp.cpp htmldatafetcher.cpp main.cpp)

SET(QUCSHELP_MOC_HDRS qucshelp.h)

QT4_WRAP_CPP( QUCSHELP_MOC_SRCS ${QUCSHELP_MOC_HDRS} )

LINK_DIRECTORIES( ${Qucs_BINARY_DIR}/qucs-tools )

ADD_EXECUTABLE( qucshelp ${QUCSHELP_SRCS} ${QUCSHELP_MOC_SRCS} )

TARGET_LINK_LIBRARIES( qucshelp ${QT_LIBRARIES} qucstools )

INSTALL(TARGETS qucshelp DESTINATION ${BINARYDIR})
