INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR/caneda-help} ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_SUBDIRECTORY( docs )

SET(CANEDAHELP_SRCS canedahelp.cpp htmldatafetcher.cpp main.cpp)

SET(CANEDAHELP_MOC_HDRS canedahelp.h)

QT4_WRAP_CPP( CANEDAHELP_MOC_SRCS ${CANEDAHELP_MOC_HDRS} )

LINK_DIRECTORIES( ${Caneda_BINARY_DIR}/caneda-tools )

ADD_EXECUTABLE( canedahelp ${CANEDAHELP_SRCS} ${CANEDAHELP_MOC_SRCS} )

TARGET_LINK_LIBRARIES( canedahelp ${QT_LIBRARIES} canedatools )

INSTALL(TARGETS canedahelp DESTINATION ${BINARYDIR})
