FILE( GLOB TS_FILES ${CMAKE_SOURCE_DIR}/i18n/*.ts )
LIST( REMOVE_ITEM TS_FILES "${CMAKE_SOURCE_DIR}/i18n/qtgeneric_untranslated.ts" )

QT5_CREATE_TRANSLATION( QM_FILES ${CMAKE_SOURCE_DIR}/i18n/ ${TS_FILES} OPTIONS -I ${CMAKE_SOURCE_DIR}/src )

ADD_CUSTOM_TARGET( translations ALL DEPENDS ${QM_FILES} )
INSTALL( FILES ${QM_FILES} DESTINATION ${LANGUAGEDIR} )
